Bug 170017 - dolphin slows down after few hours
Summary: dolphin slows down after few hours
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-29 00:42 UTC by Tomasz Dudzik
Modified: 2008-10-09 00:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomasz Dudzik 2008-08-29 00:42:33 UTC
Version:            (using Devel)
Compiler:          CMake 2.6 
OS:                Linux
Installed from:    Compiled sources

When i first start KDE, dolphin works great, but after few hours of work it dramatically slows down, so i have to wait about 30 sec. to swich to other directory.
Comment 1 Peter Penz 2008-08-29 16:34:41 UTC
Thanks Tomasz for the report. Could you please let me know whether you've enabled strigi and/or nepomuk?
Comment 2 Tomasz Dudzik 2008-08-30 14:39:00 UTC
Yes, i did. About to day ago i removed the ~/.kde4 folder to restore all settings. The Nepomuk in systray is not runinng. Dolphin is now fast like the first time i run it. So dolphin slows because of nepomuk i guess?
Comment 3 Peter Penz 2008-08-31 13:10:20 UTC
> So dolphin slows because of nepomuk i guess?

This is difficult to answer with a simple 'yes' or 'no' ;-) For sure Strigi/Nepomuk provide an overhead to the system, but they should not slow down applications dramatically. But when having a new account, the first thing Nepomuk does is triggiring strigi to index the whole user data. This might take several hours depending on the size of the user data. Afterwards the system should be responsible as usual. However this "indexing after startup" code is quite new and maybe this has lead to a big slow-down in your case. If it's an ongoing problem I'll anyhow get a huge numbers of bug-reports and will forward this problem to the strigi/nepomuk maintainers :-)
Comment 4 Tomasz Dudzik 2008-08-31 16:42:09 UTC
Maybe it is because of Nepomuk/strigi. But Konqueror is a file menager too and after indexing all of my data it's not slow like dolphin. 
Comment 5 Peter Penz 2008-08-31 23:53:55 UTC
Do you use Dolphin's Information Panel? Konqueror uses Dolphin for the file management internally and the Information Panel (which makes extensive use of Nepomuk and is not available in Konqueror) might be the difference here...
Comment 6 Tomasz Dudzik 2008-09-01 18:35:40 UTC
Yes, i'm using the Info Panel. Ok, now i have to wait for the better times of Nepomuk. Great job in Dolphin btw ;]
Comment 7 Peter Penz 2008-10-09 00:06:35 UTC
The issue has been fixed for KDE 4.2.