Improve performance of information panel. Depending on the used backend reading the meta information like rating, tags and comments can be slow (especially when e. g. selecting 1000 files at once having items that are not cached yet). The reading of the meta information is now forwarded to a separate thread, so that Dolphin never gets blocked.

CCMAIL: sebastian@trueg.de
BUG: 170017
BUG: 164309
BUG: 166057

svn path=/trunk/KDE/kdebase/apps/; revision=869401